Changed title and removed DOB

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>Winnie Muthoni Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Winnie Muthoni</h1>
-      <p>I'm <span class="typed" data-typed-items="a Finance Manager, a Tax and Compliance Expert, an Account and Financial Advisor"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Finance Manager, a Tax and Compliance Expert, a Certfied Public Accountant - Kenya,a Financial Advisor"></span></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
@@ -108,7 +108,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Year of Birth:</strong> <span>1988</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Year of Birth:</strong> <span>1988</span></li> -->
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+254 720 331802</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nairobi, Kenya</span></li>
@@ -380,7 +380,7 @@
             <div class="resume-item">
               <h4>Finance Manager</h4>
               <h5>Jan 2024 - Present</h5>
-              <p><em>KTDA, Kenya </em></p>
+              <p><em>Kenya Tea Development Agency, Kenya </em></p>
               <ul>
                 <li>Managing the company's financial operations, including budget preparation, cash flow management, and ensuring compliance with accounting standards and regulations.</li>
     <li>Preparing and submitting monthly and quarterly financial reports, ensuring accuracy, timeliness, and alignment with organizational policies.</li>
@@ -631,9 +631,9 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>With over 15 years of experience in finance, accounting, and operations management, I am well-equipped to provide comprehensive services to support your organization's financial health and operational efficiency. My expertise spans across multiple areas, ensuring that I can deliver high-quality, impactful solutions that align with business objectives. From financial reporting and budgeting to customer relationship management and staff coordination, I am committed to driving sustainable growth and continuous improvement.
+          <p>With over 15 years of experience in finance, accounting, and operations management, I am well-equipped to provide comprehensive services to support your organization's financial health and operational efficiency. <br> My expertise spans across multiple areas, ensuring that I can deliver high-quality, impactful solutions that align with business objectives. From financial reporting and budgeting to customer relationship management and staff coordination, I am committed to driving sustainable growth and continuous improvement.
 
-            Here are the key services I offer:</p>
+            <br> Here are the key services I offer:</p>
         </div>
 
         <div class="row">
